--- a/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
@@ -1,27 +1,33 @@
 <mat-card>
   <mat-card-content>
-    <h2>
-      Apollo Gift History
-    </h2>
+    <h2>Apollo Gift History</h2>
     <div class="scrollable" *ngIf="!isLoading && !loadError; else failState">
       <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            <div>{{history.requestingAgent}}</div>
-            <div [matTooltip]="history.giftSendDateUtc | date : 'long'">{{history.giftSendDateUtc| date : 'short'}}</div>
+            <div>{{ history.requestingAgent }}</div>
+            <div [matTooltip]="history.giftSendDateUtc | date: 'long'">
+              {{ history.giftSendDateUtc | date: 'short' }}
+            </div>
           </mat-panel-title>
           <mat-panel-description>
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"><span class="label">Credits</span><span class="data">{{history.giftInventory.credits}}</span></span>
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.cars.length > 0"><span class="label">Cars</span><span class="data">{{history.giftInventory.cars.length}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"
+              ><span class="label">Credits</span
+              ><span class="data">{{ history.giftInventory.credits }}</span></span
+            >
+            <span class="inventoryPreview" *ngIf="history.giftInventory?.cars.length > 0"
+              ><span class="label">Cars</span
+              ><span class="data">{{ history.giftInventory.cars.length }}</span></span
+            >
           </mat-panel-description>
         </mat-expansion-panel-header>
         <div *ngIf="history.giftInventory.credits">
-          <h3>Credits: {{history.giftInventory.credits}}</h3>
+          <h3>Credits: {{ history.giftInventory.credits }}</h3>
         </div>
         <div *ngIf="history.giftInventory.cars">
-          <h3>Cars: {{history.giftInventory.cars.length}}</h3>
+          <h3>Cars: {{ history.giftInventory.cars.length }}</h3>
           <p *ngFor="let car of history.giftInventory.cars">
-            [{{car.quantity}}] {{car.description}} (Item Id: {{car.itemId}})
+            [{{ car.quantity }}] {{ car.description }} (Item Id: {{ car.itemId }})
           </p>
         </div>
       </mat-expansion-panel>
