--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -13,7 +13,7 @@
       >
         <!-- Item Selection -->
         <item-selection
-          [inventoryItemGroups]="inventoryItemGroups"
+          [masterInventory]="masterInventory"
           (addItemEvent)="addItemtoBasket($event)"
         ></item-selection>
 
@@ -23,7 +23,7 @@
             <ng-container matColumnDef="itemId">
               <th id="item-id-table-header" mat-header-cell *matHeaderCellDef>Id</th>
               <td mat-cell *matCellDef="let element">
-                {{ element.itemId >= 0 ? element.itemId : 'N/A' }}
+                {{ element.id >= 0 ? element.id : 'N/A' }}
               </td>
             </ng-container>
 
