--- a/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
@@ -10,12 +10,12 @@
               {{ history.giftSendDateUtc | date: 'short' }}
             </div>
           </mat-panel-title>
-          <mat-panel-description>
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"
+          <mat-panel-description *ngIf="history.giftInventory">
+            <span class="inventoryPreview" *ngIf="history.giftInventory.credits > 0"
               ><span class="label">Credits</span
               ><span class="data">{{ history.giftInventory.credits }}</span></span
             >
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.cars.length > 0"
+            <span class="inventoryPreview" *ngIf="history.giftInventory.cars?.length > 0"
               ><span class="label">Cars</span
               ><span class="data">{{ history.giftInventory.cars.length }}</span></span
             >
