--- a/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
@@ -10,24 +10,24 @@
               {{ history.giftSendDateUtc | date: 'short' }}
             </div>
           </mat-panel-title>
-          <mat-panel-description>
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"
+          <mat-panel-description *ngIf="history.giftInventory">
+            <span class="inventoryPreview" *ngIf="history.giftInventory.credits > 0"
               ><span class="label">Credits</span
               ><span class="data">{{ history.giftInventory.credits }}</span></span
             >
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.wheelSpins > 0"
+            <span class="inventoryPreview" *ngIf="history.giftInventory.wheelSpins > 0"
               ><span class="label">Wheel Spins</span
               ><span class="data">{{ history.giftInventory.wheelSpins }}</span></span
             >
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.superWheelSpins > 0"
+            <span class="inventoryPreview" *ngIf="history.giftInventory.superWheelSpins > 0"
               ><span class="label">Super Wheel Spins</span
               ><span class="data">{{ history.giftInventory.superWheelSpins }}</span></span
             >
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.skillPoints > 0"
+            <span class="inventoryPreview" *ngIf="history.giftInventory.skillPoints > 0"
               ><span class="label">Skill Points</span
               ><span class="data">{{ history.giftInventory.skillPoints }}</span></span
             >
-            <span class="inventoryPreview" *ngIf="history.giftInventory?.forzathonPoints > 0"
+            <span class="inventoryPreview" *ngIf="history.giftInventory.forzathonPoints > 0"
               ><span class="label">Forzathon Points</span
               ><span class="data">{{ history.giftInventory.forzathonPoints }}</span></span
             >
