--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
@@ -14,7 +14,7 @@
           (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
         ></sunrise-player-selection>
       </mat-tab>
-      <mat-tab *ngIf="!disableLspGroupSelection" label="LSP Group Selection">
+      <mat-tab label="LSP Group Selection">
         <sunrise-lsp-group-selection
           [(ngModel)]="selectedLspGroup"
           (ngModelChange)="onLspGroupChange($event)"
