Sunrise inventory connections

--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise.component.html
@@ -17,6 +17,11 @@
             <sunrise-credit-history [xuid]="xuid"></sunrise-credit-history>
           </div>
         </mat-tab>
+        <mat-tab label="Inventory">
+          <div class="tab-container">
+            <sunrise-player-inventory [identity]="identity"></sunrise-player-inventory>
+          </div>
+        </mat-tab>
         <mat-tab label="Notifications">
           <div class="tab-container">
             <sunrise-player-notifications [xuid]="xuid"></sunrise-player-notifications>
