--- a/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise.component.html
@@ -1,2 +1,50 @@
 <p>sunrise works!</p>
-<pre>{{ identity | bigjson }}</pre>
+
+<div *ngIf="inventory">
+  <h2>Summary</h2>
+  <table class="numbers">
+    <tr>
+      <th>Credits</th>
+      <td>{{ inventory.credits }}</td>
+    </tr>
+    <tr>
+      <th>Wheel Spins</th>
+      <td>{{ inventory.wheelSpins }}</td>
+    </tr>
+    <tr>
+      <th>Super Wheel Spins</th>
+      <td>{{ inventory.superWheelSpins }}</td>
+    </tr>
+    <tr>
+      <th>Skill Points</th>
+      <td>{{ inventory.skillPoints }}</td>
+    </tr>
+    <tr>
+      <th>Forzathon Points</th>
+      <td>{{ inventory.forzathonPoints }}</td>
+    </tr>
+  </table>
+
+  <mat-accordion>
+    <mat-expansion-panel *ngFor="let thingToShow of whatToShow">
+      <mat-expansion-panel-header>
+        <mat-panel-title>{{ thingToShow.title }}</mat-panel-title>
+        <mat-panel-description>{{ thingToShow.description }}</mat-panel-description>
+      </mat-expansion-panel-header>
+      <table mat-table [dataSource]="inventory[thingToShow.property]">
+        <ng-container matColumnDef="quantity">
+          <td mat-cell *matCellDef="let item">{{ item.quantity }}</td>
+        </ng-container>
+        <ng-container matColumnDef="acquisitionUtc">
+          <td mat-cell *matCellDef="let item" [matTooltip]="item.acquisitionUtc | date: 'long'">{{ item.acquisitionUtc | date: 'short' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+          <td mat-cell *matCellDef="let item">{{ item.description }}</td>
+        </ng-container>
+        <tr mat-row *matRowDef="let row; columns: ['quantity', 'description', 'acquisitionUtc']">
+      </table>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
+
+<json-dump [input]="inventory">Inventory Response</json-dump>
