--- a/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise.component.html
@@ -1,5 +1,3 @@
-<p>sunrise works!</p>
-
 <div *ngIf="inventory">
   <h2>Summary</h2>
   <table class="numbers">
@@ -39,7 +37,7 @@
           <td mat-cell *matCellDef="let item" [matTooltip]="item.acquisitionUtc | date: 'long'">{{ item.acquisitionUtc | date: 'short' }}</td>
         </ng-container>
         <ng-container matColumnDef="description">
-          <td mat-cell *matCellDef="let item">{{ item.description }}</td>
+          <td mat-cell *matCellDef="let item">{{ item.description | humanize }}</td>
         </ng-container>
         <tr mat-row *matRowDef="let row; columns: ['quantity', 'description', 'acquisitionUtc']">
       </table>
