--- a/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="inventory">
+<div *ngIf="inventory; else failstate">
   <h2>Summary</h2>
   <table class="numbers">
     <tr>
@@ -34,15 +34,25 @@
           <td mat-cell *matCellDef="let item">{{ item.quantity }}</td>
         </ng-container>
         <ng-container matColumnDef="acquisitionUtc">
-          <td mat-cell *matCellDef="let item" [matTooltip]="item.acquisitionUtc | date: 'long'">{{ item.acquisitionUtc | date: 'short' }}</td>
+          <td mat-cell *matCellDef="let item" [matTooltip]="item.acquisitionUtc | date: 'long'">
+            {{ item.acquisitionUtc | date: 'short' }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="description">
           <td mat-cell *matCellDef="let item">{{ item.description | humanize }}</td>
         </ng-container>
-        <tr mat-row *matRowDef="let row; columns: ['quantity', 'description', 'acquisitionUtc']">
+        <tr
+          mat-row
+          *matRowDef="let row; columns: ['quantity', 'description', 'acquisitionUtc']"
+        ></tr>
       </table>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
 
 <json-dump [input]="inventory">Inventory Response</json-dump>
+
+<ng-template #failstate>
+  <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
+  <json-dump *ngIf="error" [input]="error">Failed to load.</json-dump>
+</ng-template>
