--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
@@ -22,5 +22,7 @@
     </button>
   </mat-form-field>
   <span class="spacer"></span>
+  <player-selection-single></player-selection-single>
+  <span class="spacer"></span>
 </mat-toolbar>
 <router-outlet></router-outlet>
