--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.scss
@@ -6,8 +6,13 @@
   flex-basis: 16px;
 }
 
-mat-form-field {
-  font-size: 14px;
+:host ::ng-deep {
+  * {
+    font-size: 14px;
+  }
+  & .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
+    line-height: initial;
+  }
 }
 
 // TODO: This should probably be made into a function
