returning background jobs when requests use background jobs to process

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -10,7 +10,7 @@
       "
     >
       <!-- Direct view to use gifting response state if component is waiting for response or has response -->
-      <ng-container *ngIf="!!giftResponse; else giftResponseState">
+      <ng-container *ngIf="!giftResponse; else giftResponseState">
         <!-- Item Selection -->
         <item-selection
           [masterInventory]="masterInventory"
