--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
@@ -1,13 +1,18 @@
 <mat-toolbar color="default">
-  <a
-    [routerLink]="sunriseRouterLink"
-    [queryParams]="{ gamertag: gamertag }"
-    mat-button
-    routerLinkActive="mat-stroked-button"
-    >Sunrise</a
-  >
+  <a [class.mat-button-disabled]="!identity?.extra.hasSunrise" [routerLink]="sunriseRouterLink"
+    [queryParams]="{ gamertag: gamertag }" mat-button [color]="identity?.extra.hasSunrise ? 'primary' : null"
+    routerLinkActive="mat-stroked-button">Sunrise</a>
+  <a [class.mat-button-disabled]="!identity?.extra.hasOpus" [routerLink]="opusRouterLink"
+    [queryParams]="{ gamertag: gamertag }" mat-button [color]="identity?.extra.hasOpus ? 'primary' : null"
+    routerLinkActive="mat-stroked-button">Opus</a>
+  <a [class.mat-button-disabled]="!identity?.extra.hasApollo" [routerLink]="apolloRouterLink"
+    [queryParams]="{ gamertag: gamertag }" mat-button [color]="identity?.extra.hasApollo ? 'primary' : null"
+    routerLinkActive="mat-stroked-button">Apollo</a>
+  <a [class.mat-button-disabled]="!identity?.extra.hasGravity" [routerLink]="gravityRouterLink"
+    [queryParams]="{ gamertag: gamertag }" mat-button [color]="identity?.extra.hasGravity ? 'primary' : null"
+    routerLinkActive="mat-stroked-button">Gravity</a>
   <span class="icon-spacer"></span>
-  <mat-form-field>
+  <!-- <mat-form-field>
     <mat-label>Gamertag</mat-label>
     <input matInput type="text" [(ngModel)]="gamertag" (keyup.enter)="navigate()" />
     <button
@@ -20,9 +25,9 @@
     >
       <mat-icon>close</mat-icon>
     </button>
-  </mat-form-field>
-  <span class="spacer"></span>
-  <player-selection-single></player-selection-single>
+  </mat-form-field> -->
+  <player-selection-single [(lookupType)]="lookupType" [(lookupList)]="lookupList" (lookupListChange)="lookupChange()"
+    (lookupTypeChange)="lookupChange()" (found)="found($event)"></player-selection-single>
   <span class="spacer"></span>
 </mat-toolbar>
 <router-outlet></router-outlet>
