Routing works again

--- a/StewardClient/src/app/pages/navbar-app/components/player-selection-single/player-selection-single.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection-single/player-selection-single.component.scss
@@ -16,3 +16,7 @@ mat-chip {
 .identity-invalid {
   background-color: mat-color($app-warn, 'lighter');
 }
+
+:host ::ng-deep .mat-chip-list-wrapper {
+  flex-wrap: nowrap;
+}
