--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
@@ -65,6 +65,10 @@ mat-card {
       top: -7px;
     }
   }
+
+  button.reset-state {
+    margin-top: 20px;
+  }
 }
 
 @media screen and (max-width: 500px) {
