--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -127,7 +127,7 @@
           <button
             mat-raised-button
             color="accent"
-            (click)="clearGiftBasketState()"
+            (click)="clearGiftBasketError(true)"
             [disabled]="giftBasket?.data?.length <= 0"
           >
             Clear Gift Basket
@@ -141,7 +141,7 @@
 <ng-template #failState>
   <div id="fail-state">
     <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
-    <json-dump *ngIf="loadError" [input]="loadError" (resetStateEvent)="clearGiftBasketState()">Failure occured.</json-dump>
+    <json-dump *ngIf="loadError" [input]="loadError" (resetStateEvent)="clearGiftBasketError()">Failure occured.</json-dump>
   </div>
 </ng-template>
 
@@ -152,7 +152,7 @@
       mat-raised-button
       color="accent"
       matTooltip="Reset the failed tool."
-      (click)="clearGiftBasketState()"
+      (click)="clearGiftBasketError()"
       clickStop
     >
       Reset Tool
