--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/gravity/gravity-user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/gravity/gravity-user-details.component.html
@@ -4,7 +4,7 @@
     (xuid: {{ identity.xuid !== undefined ? identity.xuid : '?' }}) (t10id:
     {{ identity.t10Id !== undefined ? identity.t10Id : '?' }})
   </h1>
-  <section *ngIf="!!identity.gamertag">
+  <section>
     <mat-tab-group animationDuration="0ms">
       <mat-tab label="User Details">
         <div class="tab-container">
