--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise-user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise-user-details.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="identity && !identity?.error; else noIdentity">
   <h1>{{ identity.gamertag }} (xuid: {{ identity.xuid !== undefined ? identity.xuid : '?' }})</h1>
-  <section *ngIf="!!identity.gamertag">
+  <section>
     <mat-tab-group animationDuration="0ms">
       <mat-tab label="User Details">
         <div class="tab-container">
