--- a/StewardClient/src/app/shared/views/player-inventory/apollo/apollo-player-inventory.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/apollo/apollo-player-inventory.component.html
@@ -1,1 +1,18 @@
-<p>apollo-player-inventory works!</p>
+<div *ngIf="inventory; else failstate">
+  <h2>Summary</h2>
+  <table class="numbers">
+    <tr>
+      <th>Credits</th>
+      <td>{{ inventory.credits }}</td>
+    </tr>
+  </table>
+
+  <player-inventory-tables [inventory]="inventory" [whatToShow]="whatToShow"></player-inventory-tables>
+</div>
+
+<json-dump [input]="inventory">Inventory Response</json-dump>
+
+<ng-template #failstate>
+  <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
+  <json-dump *ngIf="error" [input]="error">Failed to load.</json-dump>
+</ng-template>
