--- a/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise-player-inventory.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/sunrise/sunrise-player-inventory.component.html
@@ -23,31 +23,7 @@
     </tr>
   </table>
 
-  <mat-accordion>
-    <mat-expansion-panel *ngFor="let thingToShow of whatToShow">
-      <mat-expansion-panel-header>
-        <mat-panel-title>{{ thingToShow.title }}</mat-panel-title>
-        <mat-panel-description>{{ thingToShow.description }}</mat-panel-description>
-      </mat-expansion-panel-header>
-      <table mat-table [dataSource]="inventory[thingToShow.property]">
-        <ng-container matColumnDef="quantity">
-          <td mat-cell *matCellDef="let item">{{ item.quantity }}</td>
-        </ng-container>
-        <ng-container matColumnDef="acquisitionUtc">
-          <td mat-cell *matCellDef="let item" [matTooltip]="item.acquisitionUtc | date: 'long'">
-            {{ item.acquisitionUtc | date: 'short' }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="description">
-          <td mat-cell *matCellDef="let item">{{ item.description | humanize }}</td>
-        </ng-container>
-        <tr
-          mat-row
-          *matRowDef="let row; columns: ['quantity', 'description', 'acquisitionUtc']"
-        ></tr>
-      </table>
-    </mat-expansion-panel>
-  </mat-accordion>
+  <player-inventory-tables [inventory]="inventory" [whatToShow]="whatToShow"></player-inventory-tables>
 </div>
 
 <json-dump [input]="inventory">Inventory Response</json-dump>
