--- a/StewardClient/src/app/shared/views/player-inventory/apollo/apollo-player-inventory.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/apollo/apollo-player-inventory.component.html
@@ -7,7 +7,10 @@
     </tr>
   </table>
 
-  <player-inventory-tables [inventory]="inventory" [whatToShow]="whatToShow"></player-inventory-tables>
+  <player-inventory-tables
+    [inventory]="inventory"
+    [whatToShow]="whatToShow"
+  ></player-inventory-tables>
 </div>
 
 <json-dump [input]="inventory">Inventory Response</json-dump>
