--- a/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.html
@@ -6,15 +6,15 @@
     </mat-expansion-panel-header>
     <table mat-table [dataSource]="inventory[thingToShow.property]">
       <ng-container matColumnDef="quantity">
-        <td mat-cell *matCellDef="let item">{{ item.quantity }}</td>
+        <td mat-cell *matCellDef="let item">{{ item.quantity || '?' }}</td>
       </ng-container>
       <ng-container matColumnDef="acquisitionUtc">
-        <td mat-cell *matCellDef="let item" [matTooltip]="item.acquisitionUtc | date: 'long'">
-          {{ item.acquisitionUtc | date: 'short' }}
+        <td mat-cell *matCellDef="let item" [matTooltip]="(item.acquisitionUtc || item.dateCreatedUtc)| date: 'long'">
+          {{ (item.acquisitionUtc || item.dateCreatedUtc) | date: 'short' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="description">
-        <td mat-cell *matCellDef="let item">{{ item.description | humanize }}</td>
+        <td mat-cell *matCellDef="let item">{{ (item.displayName || (item.description | humanize)) }}</td>
       </ng-container>
       <tr mat-row *matRowDef="let row; columns: ['quantity', 'description', 'acquisitionUtc']"></tr>
     </table>
