can now download the json gifting results

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
@@ -66,8 +66,12 @@ mat-card {
     }
   }
 
-  button.reset-state {
-    margin-top: 20px;
+  .gift-response-template {
+
+    button {
+      margin-right: 20px;
+      margin-top: 20px;
+    }
   }
 }
 
