--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -127,7 +127,7 @@
           <button
             mat-raised-button
             color="accent"
-            (click)="clearGiftBasketError(true)"
+            (click)="resetGiftBasketUI(true)"
             [disabled]="giftBasket?.data?.length <= 0"
           >
             Clear Gift Basket
@@ -141,22 +141,33 @@
 <ng-template #failState>
   <div id="fail-state">
     <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
-    <json-dump *ngIf="loadError" [input]="loadError" (resetStateEvent)="clearGiftBasketError()">Failure occured.</json-dump>
+    <json-dump *ngIf="loadError" [input]="loadError" (resetStateEvent)="resetGiftBasketUI()">Failure occured.</json-dump>
   </div>
 </ng-template>
 
 <ng-template #giftResponseState>
+  <div class="gift-response-template">
     <gifting-result [giftingResult]="giftResponse"></gifting-result>
+    <button
+      mat-raised-button
+      color="primary"
+      matTooltip="Download the gifting results."
+      (click)="downloadResults()"
+      clickStop
+    >
+      Download results
+    </button>
     <button
       class="reset-state"
       mat-raised-button
       color="accent"
       matTooltip="Reset the failed tool."
-      (click)="clearGiftBasketError()"
+      (click)="resetGiftBasketUI(true)"
       clickStop
     >
-      Reset Tool
+      Send another gift
     </button>
+  </div>
 </ng-template>
 
 <ng-template #waitingForGameSettings>
