--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.scss
@@ -1,1 +1,10 @@
 @import '/src/variables.scss';
+
+div {
+  max-height: 500px;
+  overflow: auto;
+
+  .gift-result-error {
+    background-color: mat-color($app-warn, 200);
+  }
+}
