--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.html
@@ -1,7 +1,11 @@
 <div>
   <h4 *ngIf="numGiftingError <= 0">All Gifts Sent Successfully</h4>
   <h4 *ngIf="numGiftingError > 0">{{ numGiftingError }} Gifting Errors</h4>
-  <mat-expansion-panel  *ngFor="let result of giftingResult" [disabled]="!result.error" [ngClass]="{ 'gift-result-error': !!result.error }">
+  <mat-expansion-panel
+    *ngFor="let result of giftingResult"
+    [disabled]="!result.error"
+    [ngClass]="{ 'gift-result-error': !!result.error }"
+  >
     <mat-expansion-panel-header>
       <mat-panel-title>
         {{ result.playerOrLspGroup }} ({{ GiftHistoryAntecedent[result.identityAntecedent] }})
@@ -10,7 +14,7 @@
         {{ !!result.error ? 'Click to see error' : 'Gift sent successfully' }}
       </mat-panel-description>
     </mat-expansion-panel-header>
-    
+
     <p>{{ result.error | bigjson }}</p>
   </mat-expansion-panel>
 </div>
