--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -141,7 +141,9 @@
 <ng-template #failState>
   <div id="fail-state">
     <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
-    <json-dump *ngIf="loadError" [input]="loadError" (resetStateEvent)="resetGiftBasketUI()">Failure occured.</json-dump>
+    <json-dump *ngIf="loadError" [input]="loadError" (resetStateEvent)="resetGiftBasketUI()"
+      >Failure occured.</json-dump
+    >
   </div>
 </ng-template>
 
