--- a/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.html
@@ -9,11 +9,7 @@
         <td mat-cell *matCellDef="let item">{{ item.quantity }}</td>
       </ng-container>
       <ng-container matColumnDef="acquisitionUtc">
-        <td
-          mat-cell
-          *matCellDef="let item"
-          [matTooltip]="item.dateCreatedUtc | date: 'long'"
-        >
+        <td mat-cell *matCellDef="let item" [matTooltip]="item.dateCreatedUtc | date: 'long'">
           {{ item.dateCreatedUtc | date: 'short' }}
         </td>
       </ng-container>
