Sunrise player inventory picker

--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise-user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise-user-details.component.html
@@ -18,6 +18,7 @@
       </mat-tab>
       <mat-tab label="Inventory">
         <div class="tab-container">
+          <sunrise-player-inventory-profile-picker [identity]="identity"></sunrise-player-inventory-profile-picker>
           <sunrise-player-inventory [identity]="identity"></sunrise-player-inventory>
         </div>
       </mat-tab>
