Sunrise Profile Picker works

--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise-user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/sunrise-user-details.component.html
@@ -18,8 +18,8 @@
       </mat-tab>
       <mat-tab label="Inventory">
         <div class="tab-container">
-          <sunrise-player-inventory-profile-picker [identity]="identity"></sunrise-player-inventory-profile-picker>
-          <sunrise-player-inventory [identity]="identity"></sunrise-player-inventory>
+          <sunrise-player-inventory-profile-picker [identity]="identity" [(profileId)]="profileId" (profileIdChange)="onProfileIdChange($event)"></sunrise-player-inventory-profile-picker>
+          <sunrise-player-inventory [identity]="identity" [profileId]="profileId"></sunrise-player-inventory>
         </div>
       </mat-tab>
       <mat-tab label="Notifications">
