--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -5,7 +5,7 @@
     <!-- Gravity is unique, master inventory is based on player inventory game settings -->
     <ng-container
       *ngIf="
-        !hasGameSettings || (hasGameSettings && !!playerInventory);
+        !hasGameSettings || (hasGameSettings && !!currentGameSettings);
         else waitingForGameSettings
       "
     >
@@ -174,6 +174,6 @@
 
 <ng-template #waitingForGameSettings>
   <div id="waiting-for-game-settings">
-    <p>Waiting for player inventory to populate...</p>
+    <p>Waiting for player to be selected.</p>
   </div>
 </ng-template>
