use subject for gravity player identities

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -5,7 +5,7 @@
     <!-- Gravity is unique, master inventory is based on player inventory game settings -->
     <ng-container
       *ngIf="
-        !hasGameSettings || (hasGameSettings && !!currentGameSettings);
+        !hasGameSettings || (hasGameSettings && !!selectedGameSettingsId);
         else waitingForGameSettings
       "
     >
