adding gravity gifts work. need to verify what hard currency is

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <h2>{{ title }} Gift Basket</h2>
-  <p *ngIf="hasGameSettings">(Game Settings Id: {{ !!selectedGameSettingsId || 'None' }})</p>
+  <p *ngIf="hasGameSettings">(Game Settings: {{ selectedGameSettingsId || 'None' }})</p>
 
   <ng-container *ngIf="!isLoading && !loadError; else failState">
     <!-- Gravity is unique, master inventory is based on player inventory game settings -->
