--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -30,19 +30,17 @@
 
             <ng-container matColumnDef="description">
               <th mat-header-cell *matHeaderCellDef>Description</th>
-              <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="itemType">
-              <th mat-header-cell *matHeaderCellDef>Type</th>
-              <td mat-cell *matCellDef="let element">{{ element.itemType }}</td>
+              <td mat-cell *matCellDef="let element">
+                {{ element.description }}
+                <mat-error *ngIf="!!element.error">{{ element.error }}</mat-error>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="quantity">
               <th id="quantity-table-header" mat-header-cell *matHeaderCellDef>Quantity</th>
               <td mat-cell *matCellDef="let element; let i = index">
                 <span *ngIf="!element.edit">
-                  {{ element.quantity }}
+                  {{ element.quantity | number:'1.0':'en-US' }}
                   <fa-icon
                     [icon]="pencilIcon"
                     (click)="element.edit = true"
@@ -83,6 +81,11 @@
               </td>
             </ng-container>
 
+            <ng-container matColumnDef="itemType">
+              <th mat-header-cell *matHeaderCellDef>Type</th>
+              <td mat-cell *matCellDef="let element">{{ element.itemType }}</td>
+            </ng-container>
+
             <ng-container matColumnDef="remove">
               <th id="quantity-table-header" mat-header-cell *matHeaderCellDef>Remove</th>
               <td mat-cell *matCellDef="let element; let i = index">
@@ -98,9 +101,10 @@
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns" [ngClass]="{'row-error': !!row.error }"></tr>
           </table>
         </div>
+        <mat-error *ngIf="giftBasketErrors">There are item errors in the gift basket.</mat-error>
 
         <!-- Send Gift Basket -->
         <div class="send-gift-basket-container">
